@@ -1,14 +1,9 @@
-  This package contains a set of text filter classes.  The
-distribution includes:
+This package contains a set of text filter classes.  The distribution
+includes:
 
-  Filter::Util::Call - Perl Source Filter Utility Framework
-
-  Filter::decrypt - template for a decrypt source filter
-
-  Filter::tee - tee source filter
-
-  Filter::sh - sh command source filter
-
-  Filter::cpp - C pre-processor source filter
-
-  Filter::exec - exec source filter
+  Filter::Util::Call	Perl Source Filter Utility Framework
+  Filter::decrypt	template for a decrypt source filter
+  Filter::tee		tee source filter
+  Filter::sh		sh command source filter
+  Filter::cpp		C pre-processor source filter
+  Filter::exec		exec source filter
